syntax = "proto3";
option csharp_namespace = "Aevatar.Agents.Translation";

import "google/protobuf/timestamp.proto";

// 1. State
message TranslationState {
    string id = 1;
    int32 files_processed_count = 2;
    int64 total_chars_translated = 3;
    google.protobuf.Timestamp last_activity_at = 4;
}

// 2. Config
message TranslationConfig {
    string default_target_language = 1; // e.g., "zh-CN", "en-US"
    bool overwrite_existing = 2;
}

// 3. Events
message TranslateFileEvent {
    string file_path = 1;
    string target_language = 2; // If empty, use config default
}

message FileTranslatedEvent {
    string original_file_path = 1;
    string output_file_path = 2;
    string target_language = 3;
    bool success = 4;
    string error_message = 5;
    google.protobuf.Timestamp timestamp = 6;
}


